# OpenAI-Python-Examples

./: .gitignore  README.md  openai_model_role_compatibility.json  openai_temperature_support.json  pyproject.toml
openai_playground/: azure.py  embeddings.py  image_converter.py  locals.py  o1_sys_msg_test.py  openai_examples.py  pse_examples.py  structured_responses.py  temperature_test.py
openai_playground/hf/: api.py  api_search.py
